feat: Implement BackUserRepo and FrontUserRepo for user management via socket communication